kustomize/spark/base/spark-spark-history-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: spark
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: spark-history-server
    helm.sh/chart: spark-history-server-1.1.1
  name: spark-spark-history-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: spark
      app.kubernetes.io/name: spark-history-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: spark
        app.kubernetes.io/name: spark-history-server
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - |
          [...]
        image: lightbend/spark-history-server:2.4.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: historyport
        name: spark-history-server
        ports:
        - containerPort: 18080
          name: historyport
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: historyport
        volumeMounts:
        - mountPath: /etc/secrets
          name: secrets-volume
      serviceAccountName: spark-spark-history-server
      volumes:
      - name: secrets-volume
        secret:
          secretName: aws-secrets
