kustomize/spark/base/spark-sparkoperator-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: spark
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: sparkoperator
    helm.sh/chart: sparkoperator-0.6.1
  name: spark-sparkoperator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sparkoperator
      app.kubernetes.io/version: v1beta2-1.0.1-2.4.4
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: sparkoperator
        app.kubernetes.io/version: v1beta2-1.0.1-2.4.4
    spec:
      containers:
      - args:
        - -v=2
        - -namespace=default
        - -ingress-url-format=
        - -controller-threads=10
        - -resync-interval=30
        - -logtostderr
        - -enable-metrics=true
        - -metrics-labels=app_type
        - -metrics-port=10254
        - -metrics-endpoint=/metrics
        - -metrics-prefix=
        image: gcr.io/spark-operator/spark-operator:v1beta2-1.0.1-2.4.4
        imagePullPolicy: IfNotPresent
        name: sparkoperator
        ports:
        - containerPort: 10254
      imagePullSecrets: []
      serviceAccountName: spark-sparkoperator
