kustomize/spark/base/spark-spark-history-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spark-spark-history-server-ingress
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /spark-history/
            backend:
              serviceName: spark-spark-history-server
              servicePort: 18080
          - path: /static/
            backend:
              serviceName: spark-spark-history-server
              servicePort: 18080
          - path: /api/v1/applications
            backend:
              serviceName: spark-spark-history-server
              servicePort: 18080
          - path: /history/
            backend:
              serviceName: spark-spark-history-server
              servicePort: 18080
